name:                hackstats
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hackstats#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Gerbes
maintainer:          patrickgerbes@gmail.com
copyright:           2016 Patrick Gerbes
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Regression
                     , Statistics
  build-depends:        base >= 4.7 && < 5,
                        bytestring >= 0.10,
                        cassava >= 0.4,
                        vector >= 0.10
  default-language:    Haskell2010

executable hackstats-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackstats
                     , vector
                     , cassava
                     , bytestring
  default-language:    Haskell2010

test-suite hackstats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hackstats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pgerbes1/hackstats
